# reportyy-client-python

./: .flake8  .gitignore  LICENSE  LONG_DESCRIPTION.rst  Makefile  README.md  pyproject.toml  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build_test.yaml
reportyy/: __init__.py  client.py  error.py  http_client.py  reportyy_response.py
src/reportyy/: __init__.py  client.py  error.py  six.py  util.py
