[tool.black]

line-length=80
target-version = [
  "py27",
  "py37",
  "py38",
  "py39",
  "py310",
]
exclude = '''
/(
    \.eggs/
  | \.git/
  | \.tox/
  | \.venv/
  | _build/
  | build/
  | dist/
  | venv/
)
'''

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
